apps/uptime-kuma/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`uptime-kuma.local.cvsickle.com`)
      kind: Rule
      services:
        - name: uptime-kuma-web
          port: 3001
          sticky:
            cookie:
              name: uptime_kuma_affinity
              httpOnly: true
              secure: true
